# echo-shield

./: .gitignore  Dockerfile  docker-compose.yml  index.html  pyproject.toml
app/: config.py  db.py  hashing.py  main.py  models.py  scheduler.py  storage.py
app/connectors/: base.py  tiktok.py  youtube.py
app/models/: __init__.py  video.py
app/routers/: videos.py
app/rules/: keywords.py
app/services/: ai_score.py  ingest.py
