[tool.poetry]
name = "echo-shield"
version = "0.1.0"
description = "Echo Shield MVP backend"
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
SQLAlchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.4.0"
minio = "^7.2.5"
Pillow = "^10.4.0"
imagehash = "^4.3"
yt-dlp = "^2025.1.1"
playwright = "^1.47.0"
APScheduler = "^3.10.4"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.13.0"

[tool.poetry.scripts]
init = "playwright.__main__:main"  # 之后运行: poetry run playwright install

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
